@@ -1,6 +1,8 @@
 package io.tiledb.spark;
 
-import static io.tiledb.java.api.Datatype.*;
+import static io.tiledb.java.api.Datatype.TILEDB_UINT64;
+import static io.tiledb.java.api.Datatype.TILEDB_UINT8;
+import com.google.common.collect.Lists;
 import static io.tiledb.java.api.QueryStatus.TILEDB_COMPLETED;
 import static io.tiledb.java.api.QueryStatus.TILEDB_INCOMPLETE;
 import static io.tiledb.java.api.QueryStatus.TILEDB_UNINITIALIZED;
@@ -9,22 +11,23 @@ import static io.tiledb.libtiledb.tiledb_query_condition_op_t.TILEDB_GE;
 import static io.tiledb.libtiledb.tiledb_query_condition_op_t.TILEDB_LE;
 import static org.apache.spark.metrics.TileDBMetricsSource.queryAllocBufferTimerName;
 import static org.apache.spark.metrics.TileDBMetricsSource.queryCloseNativeArraysTimerName;
-import static org.apache.spark.metrics.TileDBMetricsSource.queryGetDimensionTimerName;
-import static org.apache.spark.metrics.TileDBMetricsSource.queryGetScalarAttributeTimerName;
 import static org.apache.spark.metrics.TileDBMetricsSource.queryGetTimerName;
-import static org.apache.spark.metrics.TileDBMetricsSource.queryGetVariableLengthAttributeTimerName;
 import static org.apache.spark.metrics.TileDBMetricsSource.queryInitTimerName;
 import static org.apache.spark.metrics.TileDBMetricsSource.queryNextTimerName;
 import static org.apache.spark.metrics.TileDBMetricsSource.queryReadTimerName;
 import static org.apache.spark.metrics.TileDBMetricsSource.queryReadTimerTaskName;
 import static org.apache.spark.metrics.TileDBMetricsSource.tileDBReadQuerySubmitTimerName;
 
+import io.netty.buffer.ArrowBuf;
 import io.tiledb.java.api.*;
+import java.lang.instrument.*;
 import java.net.URI;
+import java.nio.ByteBuffer;
+import java.nio.ByteOrder;
+import java.nio.IntBuffer;
 import java.sql.Timestamp;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
-import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -33,17 +36,32 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import org.apache.arrow.memory.RootAllocator;
+import org.apache.arrow.vector.BitVectorHelper;
+import org.apache.arrow.vector.Float4Vector;
+import org.apache.arrow.vector.IntVector;
+import org.apache.arrow.vector.ValueVector;
+import org.apache.arrow.vector.VarBinaryVector;
+import org.apache.arrow.vector.VarCharVector;
+import org.apache.arrow.vector.complex.ListVector;
+import org.apache.arrow.vector.types.FloatingPointPrecision;
+import org.apache.arrow.vector.types.pojo.ArrowType;
+import org.apache.arrow.vector.types.pojo.FieldType;
 import org.apache.log4j.Logger;
 import org.apache.spark.TaskContext;
 import org.apache.spark.metrics.TileDBReadMetricsUpdater;
+import org.apache.spark.sql.execution.arrow.ArrowUtils;
 import org.apache.spark.sql.execution.vectorized.OnHeapColumnVector;
 import org.apache.spark.sql.sources.v2.reader.InputPartitionReader;
-import org.apache.spark.sql.types.StructField;
 import org.apache.spark.sql.types.StructType;
+import org.apache.spark.sql.vectorized.ArrowColumnVector;
+import org.apache.spark.sql.vectorized.ColumnVector;
 import org.apache.spark.sql.vectorized.ColumnarBatch;
 import oshi.hardware.HardwareAbstractionLayer;
 
 public class TileDBDataReaderPartitionScan implements InputPartitionReader<ColumnarBatch> {
+
+  private static Instrumentation instrumentation;
 
   static Logger log = Logger.getLogger(TileDBDataReaderPartitionScan.class.getName());
 
@@ -96,6 +114,70 @@ public class TileDBDataReaderPartitionScan implements InputPartitionReader<Colum
    */
   private ArrayList<Pair<NativeArray, NativeArray>> queryBuffers;
 
+  private List<ArrowColumnVector> arrowVectors;
+
+  private List<ByteBuffer> byteBuffers;
+
+  private ArrayList<Pair<ValueVector, ValueVector>> queryArrowVectors;
+
+  public enum AttributeDatatype {
+    CHAR,
+    UINT8,
+    INT32,
+    FLOAT32
+  }
+
+  public class TypeInfo {
+    public AttributeDatatype datatype;
+    public boolean isVarLen;
+    public boolean isNullable;
+    public boolean isList;
+
+    public TypeInfo(
+        AttributeDatatype datatype, boolean isVarLen, boolean isNullable, boolean isList) {
+      this.datatype = datatype;
+      this.isVarLen = isVarLen;
+      this.isNullable = isNullable;
+      this.isList = isList;
+    }
+  }
+
+  public TypeInfo getTypeInfo(String column) throws TileDBError {
+
+    boolean isVarLen;
+    boolean isNullable;
+    boolean isList;
+    Datatype datatype;
+
+    if (arraySchema.hasAttribute(column)) {
+      Attribute a = arraySchema.getAttribute(column);
+      isVarLen = a.isVar();
+      isNullable = a.getNullable();
+      isList = false;
+      datatype = a.getType();
+    } else {
+      Dimension d = arraySchema.getDomain().getDimension(column);
+      isVarLen = d.isVar();
+      isNullable = false;
+      isList = false;
+      datatype = d.getType();
+    }
+
+    switch (datatype) {
+      case TILEDB_CHAR:
+        return new TypeInfo(AttributeDatatype.CHAR, isVarLen, isNullable, isList);
+      case TILEDB_INT8:
+        return new TypeInfo(AttributeDatatype.UINT8, isVarLen, isNullable, isList);
+      case TILEDB_INT32:
+        return new TypeInfo(AttributeDatatype.INT32, isVarLen, isNullable, isList);
+      case TILEDB_FLOAT32:
+        return new TypeInfo(AttributeDatatype.FLOAT32, isVarLen, isNullable, isList);
+      default:
+        throw new RuntimeException("Unknown attribute datatype " + datatype);
+        // TODO add all data types
+    }
+  }
+
   public TileDBDataReaderPartitionScan(
       URI uri,
       TileDBReadSchema schema,
@@ -103,6 +185,8 @@ public class TileDBDataReaderPartitionScan implements InputPartitionReader<Colum
       List<List<Range>> dimensionRanges,
       List<List<Range>> attributeRanges) {
     this.arrayURI = uri;
+    this.arrowVectors = new ArrayList<>();
+    this.byteBuffers = new ArrayList<>();
     this.sparkSchema = schema.getSparkSchema();
     this.options = options;
     this.queryStatus = TILEDB_UNINITIALIZED;
@@ -185,18 +269,30 @@ public class TileDBDataReaderPartitionScan implements InputPartitionReader<Colum
         metricsUpdater.finish(tileDBReadQuerySubmitTimerName);
 
         queryStatus = query.getQueryStatus();
+        //        System.out.println("here: " + query.getByteBuffer("a1").getSecond().getInt(2));
+        // //this returns something at least
+
 
         // Compute the number of cells (records) that were returned by the query.
-        HashMap<String, Pair<Long, Long>> queryResultBufferElements = query.resultBufferElements();
-        long currentNumRecords;
+        //        HashMap<String, Pair<Long, Long>> queryResultBufferElements =
+        // query.resultBufferElements();
+        //        System.out.println("printing rows");
+        //        Pair<ByteBuffer, ByteBuffer> a = query.getByteBuffer("rows");
+        //        System.out.println(a + " lol");
+        //        for (int i = 0; i < a1_buff.length; i++) {
+        //          System.out.println(a1_buff[i]);
+        //        }
+        long currentNumRecords = 1;
 
         String fieldName = fieldNames.get(0);
         boolean isVar;
         if (domain.hasDimension(fieldName)) isVar = domain.getDimension(fieldName).isVar();
         else isVar = arraySchema.getAttribute(fieldName).isVar();
 
-        if (isVar) currentNumRecords = queryResultBufferElements.get(fieldNames.get(0)).getFirst();
-        else currentNumRecords = queryResultBufferElements.get(fieldNames.get(0)).getSecond();
+        //        if (isVar) currentNumRecords =
+        // queryResultBufferElements.get(fieldNames.get(0)).getFirst();
+        //        else currentNumRecords =
+        // queryResultBufferElements.get(fieldNames.get(0)).getSecond(); //TODO add
 
         // Increase the buffer allocation and resubmit if necessary.
         if (queryStatus == TILEDB_INCOMPLETE && currentNumRecords == 0) { // VERY IMPORTANT!!
@@ -225,31 +321,38 @@ public class TileDBDataReaderPartitionScan implements InputPartitionReader<Colum
     metricsUpdater.startTimer(queryGetTimerName);
     try {
       int colIdx = 0;
-      int nRows = 0;
+      int nRows = 1; // TODO fix. needs to be exact
       // This is a special case for COUNT() on the table where no columns are materialized
-      if (sparkSchema.fields().length == 0) {
-        // TODO: materialize the first dimension and count the result set size
-        try (Dimension dim = domain.getDimension(0)) {
-          if (dim.isVar()) {
-            nRows =
-                getVarLengthAttributeColumn(
-                    dim.getName(), dim.getType(), dim.isVar(), dim.getCellValNum(), 0);
-          } else {
-            nRows = getScalarValueColumn(dim.getName(), dim.getType(), 0);
-          }
+      //      if (sparkSchema.fields().length == 0) {
+      //        // TODO: materialize the first dimension and count the result set size
+      //        try (Dimension dim = domain.getDimension(0)) {
+      //          if (dim.isVar()) {
+      //            nRows =
+      //                getVarLengthAttributeColumn(
+      //                    dim.getName(), dim.getType(), dim.isVar(), dim.getCellValNum(), 0);
+      //          } else {
+      //            nRows = getScalarValueColumn(dim.getName(), dim.getType(), 0);
+      //          }
+      //        }
+      //      } else {
+      //        // loop over all Spark attributes (DataFrame columns) and copy the query result set
+      //        for (StructField field : sparkSchema.fields()) {
+      //          nRows = getColumnBatch(field, colIdx);
+      //          colIdx++;
+      //        }
+      //      }
+      //      Pair<ByteBuffer, ByteBuffer> a = query.getByteBuffer("rows");
+      //      System.out.println(a.getFirst().getInt(0) + " <<<");
+      if (resultBatch == null) {
+        ColumnVector[] colVecs = new ColumnVector[arrowVectors.size()];
+        for (int i = 0; i < arrowVectors.size(); i++) {
+          colVecs[i] = arrowVectors.get(i);
         }
-      } else {
-        // loop over all Spark attributes (DataFrame columns) and copy the query result set
-        for (StructField field : sparkSchema.fields()) {
-          nRows = getColumnBatch(field, colIdx);
-          colIdx++;
-        }
+        resultBatch = new ColumnarBatch(colVecs);
       }
-      // set the number of rows for the batch result set this enables sharing the columnar batch
-      // columns
-      // across iterations and the total number of rows allocated will be the high water number of
-      // rows over all batches
       resultBatch.setNumRows(nRows);
+//      System.out.println("number of rows: " + resultBatch.numRows());
+
       // Note that calculateNativeArrayByteSizes() might not be
       this.metricsUpdater.updateTaskMetrics(nRows, calculateResultByteSize());
     } catch (TileDBError err) {
@@ -303,7 +406,11 @@ public class TileDBDataReaderPartitionScan implements InputPartitionReader<Colum
     }
 
     // Close out spark buffers
-    closeOnHeapColumnVectors();
+    //    closeOnHeapColumnVectors();
+    releaseArrowVectors();
+
+    // force garbage collect
+    System.gc();
 
     // Finish timer
     double duration = metricsUpdater.finish(queryReadTimerName) / 1000000000d;
@@ -481,7 +588,7 @@ public class TileDBDataReaderPartitionScan implements InputPartitionReader<Colum
     // loop over all attributes and set the query buffers based on buffer size
     // the query object handles the lifetime of the allocated (offheap) NativeArrays
     int i = 0;
-
+    releaseArrowVectors();
     for (String fieldName : fieldNames) {
       // get the spark column name and match to array schema
       String name = fieldName;
@@ -506,38 +613,133 @@ public class TileDBDataReaderPartitionScan implements InputPartitionReader<Colum
         }
       }
 
+      TypeInfo typeInfo = getTypeInfo(name);
+      RootAllocator allocator = ArrowUtils.rootAllocator();
+      ArrowType arrowType;
+      ValueVector valueVector;
+      switch (typeInfo.datatype) {
+        case CHAR:
+          if (!typeInfo.isVarLen)
+            throw new RuntimeException(
+                "Unhandled fixed-len char buffer for attribute " + fieldName);
+          if (typeInfo.isList) {
+            // Nested list (list of UTF8 which is already a list type)
+            ListVector lv = ListVector.empty(fieldName, allocator);
+            lv.addOrGetVector(FieldType.nullable(new ArrowType.Utf8()));
+            valueVector = lv;
+          } else {
+            valueVector = new VarCharVector(fieldName, allocator);
+          }
+          break;
+        case UINT8:
+          // Because there are no unsigned datatypes, the uint8_t fields must be binary blobs, not
+          // scalars.
+          if (!typeInfo.isVarLen)
+            throw new RuntimeException(
+                "Unhandled fixed-len uint8_t buffer for attribute " + fieldName);
+          // None of the attributes from TileDB-VCF currently can be a nested list except for
+          // strings.
+          if (typeInfo.isList)
+            throw new RuntimeException("Unhandled nested list for attribute " + fieldName);
+          valueVector = new VarBinaryVector(fieldName, allocator);
+          break;
+        case INT32:
+          // None of the attributes from TileDB-VCF currently can be a nested list except for
+          // strings.
+          if (typeInfo.isVarLen && typeInfo.isList)
+            throw new RuntimeException("Unhandled nested list for attribute " + fieldName);
+          arrowType = new ArrowType.Int(32, true);
+          if (typeInfo.isVarLen) {
+            ListVector lv = ListVector.empty(fieldName, allocator);
+            lv.addOrGetVector(FieldType.nullable(arrowType));
+            valueVector = lv;
+          } else {
+            valueVector = new IntVector(fieldName, FieldType.nullable(arrowType), allocator);
+            System.out.println(name + " intvector");
+          }
+          break;
+        case FLOAT32:
+          // None of the attributes from TileDB-VCF currently can be a nested list except for
+          // strings.
+          if (typeInfo.isVarLen && typeInfo.isList)
+            throw new RuntimeException("Unhandled nested list for attribute " + fieldName);
+          arrowType = new ArrowType.FloatingPoint(FloatingPointPrecision.SINGLE);
+          if (typeInfo.isVarLen) {
+            ListVector lv = ListVector.empty(fieldName, allocator);
+            lv.addOrGetVector(FieldType.nullable(arrowType));
+            valueVector = lv;
+          } else {
+            System.out.println(name + " floatvector");
+            valueVector = new Float4Vector(fieldName, FieldType.nullable(arrowType), allocator);
+          }
+          break;
+        default:
+          throw new RuntimeException("Unhandled datatype for Arrow buffer, attribute " + fieldName);
+      }
+
+      // Max number of rows is nbytes / sizeof(int32_t), i.e. the max number of offsets that can be
+      // stored.
+      long maxRowsL =
+          (readBufferSize
+              / util.getDefaultRecordByteCount(
+                  valueVector.getClass())); // TODO look what to put here
+
+      System.out.println("max rows  " + maxRowsL);
+
+
+      int maxNumRows = util.longToInt(maxRowsL);
+
+      if (valueVector instanceof ListVector) {
+        ((ListVector) valueVector).setInitialCapacity(maxNumRows, 1);
+      } else {
+        valueVector.setInitialCapacity(maxNumRows);
+      }
+      valueVector.allocateNew();
+
       int nvalues = Math.toIntExact(readBufferSize / type.getNativeSize());
-      NativeArray data = new NativeArray(ctx, nvalues, type);
-      // attribute is variable length, init the varlen result buffers using the est num offsets
+
+      ByteBuffer data;
+      ArrowBuf arrowData = valueVector.getDataBuffer();
+      data = arrowData.nioBuffer(0, arrowData.capacity());
+      data.order(ByteOrder.LITTLE_ENDIAN); // necessary for arrow buffs
+
+//      int nbytes = arrowBitmap.capacity();
+
+      // Set the validity bitmap buffer. These buffers exist even if attribute is not nullable
+      ArrowBuf arrowBitmap = valueVector.getValidityBuffer();
+      ByteBuffer bitmap = arrowBitmap.nioBuffer(0, arrowBitmap.capacity());
+
+      System.out.println(name + " /// " + arrowData.capacity() + " /// " + arrowBitmap.capacity() + " // " + type + " // " + arrowData.capacity() / type.getNativeSize()) ;
+      
       if (isVar) {
-        int noffsets = Math.toIntExact(readBufferSize / TILEDB_UINT64.getNativeSize());
-        NativeArray offsets = new NativeArray(ctx, noffsets, TILEDB_UINT64);
+        // Set the offsets buffer.
+        ArrowBuf arrowOffsets = valueVector.getOffsetBuffer();
+        ByteBuffer offsets = arrowBitmap.nioBuffer(0, arrowOffsets.capacity());
+
         if (nullable) {
-          query.setBufferNullable(name, offsets, data, new NativeArray(ctx, nvalues, TILEDB_UINT8));
+          query.setBufferNullableNIO(name, offsets, data, bitmap);
         } else {
           query.setBuffer(name, offsets, data);
+//          for (int j = 0; j < nbytes; j++) {
+//            arrowBitmap.setByte(j, 0xff);
+//          }
         }
 
-        queryBuffers.set(i++, new Pair<>(offsets, data));
       } else {
         // attribute is fixed length, use the result size estimate for allocation
         if (nullable) {
-          query.setBufferNullable(
-              name,
-              new NativeArray(ctx, nvalues, type),
-              new NativeArray(ctx, nvalues, TILEDB_UINT8));
+          query.setBufferNullableNIO(name, data, bitmap);
         } else {
-          query.setBuffer(name, new NativeArray(ctx, nvalues, type));
+          query.setBuffer(name, data);
+//          for (int j = 0; j < nbytes; j++) {
+//            arrowBitmap.setByte(j, 0xff);
+//          }
         }
-
-        queryBuffers.set(i++, new Pair<>(null, data));
       }
+//      byteBuffers.add(data);
+      this.arrowVectors.add(new ArrowColumnVector(valueVector));
+      i++;
     }
-
-    // Allocate result set batch based on the estimated (upper bound) number of rows / cells
-    resultVectors = OnHeapColumnVector.allocateColumns(ncoords, sparkSchema);
-    resultBatch = new ColumnarBatch(resultVectors);
-
     metricsUpdater.finish(queryAllocBufferTimerName);
   }
 
@@ -567,681 +769,12 @@ public class TileDBDataReaderPartitionScan implements InputPartitionReader<Colum
     return;
   }
 
-  /**
-   * For a given Spark field name, dispatch between attribute and dimension buffer copying
-   *
-   * @param field Spark field to copy query result set
-   * @param index Spark field index in the projected schmema
-   * @return number of values copied into the columnar batch result buffers
-   * @throws TileDBError A TileDB exception
-   */
-  private int getColumnBatch(StructField field, int index) throws TileDBError {
-    String name = field.name();
-
-    Datatype dataType;
-    long cellValNum;
-    boolean isVar;
-
-    if (arraySchema.hasAttribute(name)) {
-      Attribute attribute = arraySchema.getAttribute(name);
-      dataType = attribute.getType();
-      cellValNum = attribute.getCellValNum();
-      isVar = attribute.isVar();
-    } else if (domain.hasDimension(name)) {
-      Dimension dimension = domain.getDimension(name);
-      dataType = dimension.getType();
-      cellValNum = dimension.getCellValNum();
-      isVar = dimension.isVar();
-    } else {
-      throw new TileDBError(
-          "Array " + array.getUri() + " has no attribute/dimension with name " + name);
+  /** Closes any allocated Arrow vectors and clears the list. */
+  private void releaseArrowVectors() {
+    if (arrowVectors != null) {
+      for (ArrowColumnVector v : arrowVectors) v.close();
+      arrowVectors.clear();
     }
-
-    if (cellValNum > 1) {
-      return getVarLengthAttributeColumn(name, dataType, isVar, cellValNum, index);
-    } else {
-      return getScalarValueColumn(name, dataType, index);
-    }
-  }
-
-  /**
-   * Helper method for the getScalarValueColumn() method. It puts attribute values in the
-   * resultVector according to their datatype.
-   *
-   * @param name name of the attribute
-   * @param dataType datatype of the attribute
-   * @param index index of the resultVectorArray
-   * @return number of values inserted
-   * @throws TileDBError
-   */
-  private int putValuesOfAtt(String name, Datatype dataType, int index) throws TileDBError {
-    int bufferLength;
-    int numValues;
-    OffsetDateTime ms;
-    switch (dataType) {
-      case TILEDB_FLOAT32:
-        {
-          float[] buff = (float[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putFloats(0, bufferLength, buff, 0);
-          }
-          break;
-        }
-      case TILEDB_FLOAT64:
-        {
-          double[] buff = (double[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putDoubles(0, bufferLength, buff, 0);
-          }
-          break;
-        }
-      case TILEDB_INT8:
-      case TILEDB_CHAR:
-        {
-          byte[] buff = (byte[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putBytes(0, bufferLength, buff, 0);
-          }
-          break;
-        }
-      case TILEDB_INT16:
-      case TILEDB_UINT8:
-        {
-          short[] buff = (short[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putShorts(0, bufferLength, buff, 0);
-          }
-          break;
-        }
-      case TILEDB_INT32:
-      case TILEDB_UINT16:
-        {
-          int[] buff = (int[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putInts(0, bufferLength, buff, 0);
-          }
-          break;
-        }
-      case TILEDB_INT64:
-      case TILEDB_UINT32:
-      case TILEDB_UINT64:
-      case TILEDB_DATETIME_US:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buff, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_AS:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i / 1000000000000000L).toArray();
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buffConverted, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_FS:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i / 1000000000).toArray();
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buffConverted, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_PS:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i / 1000000).toArray();
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buffConverted, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_NS:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i / 1000).toArray();
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buffConverted, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_MS:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i * 1000).toArray();
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buffConverted, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_SEC:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i * 1000000).toArray();
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buffConverted, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_MIN:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i * 60 * 1000000).toArray();
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buffConverted, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_HR:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i * 60 * 60 * 1000000).toArray();
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buffConverted, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_DAY:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          for (int i = 0; i < buff.length; i++) {
-            ms = zeroDateTime.plusDays(buff[i]);
-            buff[i] = ChronoUnit.MICROS.between(zeroDateTime, ms);
-          }
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buff, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_WEEK:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          for (int i = 0; i < buff.length; i++) {
-            ms = zeroDateTime.plusWeeks(buff[i]);
-            buff[i] = ChronoUnit.MICROS.between(zeroDateTime, ms);
-          }
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buff, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_MONTH:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          for (int i = 0; i < buff.length; i++) {
-            ms = zeroDateTime.plusMonths(buff[i]);
-            buff[i] = ChronoUnit.MICROS.between(zeroDateTime, ms);
-          }
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buff, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_YEAR:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          numValues = bufferLength;
-          for (int i = 0; i < buff.length; i++) {
-            ms = zeroDateTime.plusYears(buff[i]);
-            buff[i] = ChronoUnit.MICROS.between(zeroDateTime, ms);
-          }
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buff, 0);
-          }
-          break;
-        }
-      default:
-        {
-          throw new TileDBError("Not supported getDomain getType " + dataType);
-        }
-    }
-    return numValues;
-  }
-
-  /**
-   * This method is responsible for reading the values from the given attribute. It is only called
-   * for attributes with fixed size.
-   *
-   * @param name name of the attribute.
-   * @param dataType datatype of the attribute.
-   * @param index index of the result vector that corresponds to this attribute.
-   * @return
-   * @throws TileDBError
-   */
-  private int getScalarValueColumn(String name, Datatype dataType, int index) throws TileDBError {
-
-    metricsUpdater.startTimer(queryGetScalarAttributeTimerName);
-    boolean nullable = false;
-    int numValues;
-    short[] validityByteMap;
-
-    if (this.arraySchema.hasAttribute(name)) {
-      try (Attribute attr = this.arraySchema.getAttribute(name)) {
-        nullable = attr.getNullable();
-      }
-    }
-    numValues = putValuesOfAtt(name, dataType, index);
-    if (nullable) { // if the attribute is nullable, check the validity map and act accordingly.
-      validityByteMap = query.getValidityByteMap(name);
-      for (int i = 0; i < validityByteMap.length; i++) {
-        if (validityByteMap[i] == 0) resultVectors[index].putNull(i);
-      }
-    }
-    metricsUpdater.finish(queryGetScalarAttributeTimerName);
-    return numValues;
-  }
-
-  /**
-   * Helper method for the getVarLengthAttributeColumn() method. It puts attribute values in the
-   * resultVector according to their datatype.
-   *
-   * @param name name of the attribute
-   * @param dataType datatype of the attribute
-   * @param index index of the resultVectorArray
-   * @return number of values inserted
-   * @throws TileDBError
-   */
-  private int putValuesOfAttVar(String name, Datatype dataType, int index) throws TileDBError {
-    int bufferLength;
-    OffsetDateTime ms;
-    switch (dataType) {
-      case TILEDB_FLOAT32:
-        {
-          float[] buff = (float[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putFloats(0, bufferLength, buff, 0);
-          break;
-        }
-      case TILEDB_FLOAT64:
-        {
-          double[] buff = (double[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putDoubles(0, bufferLength, buff, 0);
-          break;
-        }
-      case TILEDB_INT8:
-      case TILEDB_CHAR:
-        // string types that don't require any re-encoding to Spark UTF-8 representation supported
-        // for now
-      case TILEDB_STRING_ASCII:
-      case TILEDB_STRING_UTF8:
-        {
-          byte[] buff = (byte[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putBytes(0, bufferLength, buff, 0);
-          break;
-        }
-      case TILEDB_INT16:
-      case TILEDB_UINT8:
-        {
-          short[] buff = (short[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putShorts(0, bufferLength, buff, 0);
-          break;
-        }
-      case TILEDB_INT32:
-      case TILEDB_UINT16:
-        {
-          int[] buff = (int[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putInts(0, bufferLength, buff, 0);
-          break;
-        }
-      case TILEDB_INT64:
-      case TILEDB_UINT32:
-      case TILEDB_UINT64:
-      case TILEDB_DATETIME_US:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buff, 0);
-          break;
-        }
-      case TILEDB_DATETIME_MS:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i * 1000).toArray();
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buffConverted, 0);
-          break;
-        }
-      case TILEDB_DATETIME_AS:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i / 1000000000000L).toArray();
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buffConverted, 0);
-          break;
-        }
-      case TILEDB_DATETIME_FS:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i / 1000000000).toArray();
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buffConverted, 0);
-          break;
-        }
-      case TILEDB_DATETIME_PS:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i / 1000000).toArray();
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buffConverted, 0);
-          break;
-        }
-      case TILEDB_DATETIME_NS:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i / 1000).toArray();
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buffConverted, 0);
-          break;
-        }
-      case TILEDB_DATETIME_SEC:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i * 1000000).toArray();
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buffConverted, 0);
-          break;
-        }
-      case TILEDB_DATETIME_MIN:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i * 1000000000).toArray();
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buffConverted, 0);
-          break;
-        }
-      case TILEDB_DATETIME_HR:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          long[] buffConverted = Arrays.stream(buff).map(i -> i * 1000000000000L).toArray();
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buffConverted, 0);
-          break;
-        }
-      case TILEDB_DATETIME_DAY:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          for (int i = 0; i < buff.length; i++) {
-            ms = zeroDateTime.plusDays(buff[i]);
-            buff[i] = ChronoUnit.MICROS.between(zeroDateTime, ms);
-          }
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buff, 0);
-          break;
-        }
-      case TILEDB_DATETIME_WEEK:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          for (int i = 0; i < buff.length; i++) {
-            ms = zeroDateTime.plusWeeks(buff[i]);
-            buff[i] = ChronoUnit.MICROS.between(zeroDateTime, ms);
-          }
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buff, 0);
-          break;
-        }
-      case TILEDB_DATETIME_MONTH:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          for (int i = 0; i < buff.length; i++) {
-            ms = zeroDateTime.plusMonths(buff[i]);
-            buff[i] = ChronoUnit.MICROS.between(zeroDateTime, ms);
-          }
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buff, 0);
-          break;
-        }
-      case TILEDB_DATETIME_YEAR:
-        {
-          long[] buff = (long[]) query.getBuffer(name);
-          bufferLength = buff.length;
-          for (int i = 0; i < buff.length; i++) {
-            ms = zeroDateTime.plusYears(buff[i]);
-            buff[i] = ChronoUnit.MICROS.between(zeroDateTime, ms);
-          }
-          resultVectors[index].getChild(0).reserve(bufferLength);
-          resultVectors[index].getChild(0).putLongs(0, bufferLength, buff, 0);
-          break;
-        }
-      default:
-        {
-          throw new TileDBError("Not supported getDomain getType " + dataType);
-        }
-    }
-    return bufferLength;
-  }
-
-  /**
-   * This method is responsible for reading the values from the given attribute. It is only called
-   * for attributes with variable size.
-   *
-   * @param name name of the attribute.
-   * @param dataType datatype of the attribute.
-   * @param index index of the result vector that corresponds to this attribute.
-   * @param isVar true if the attribute has variable length.
-   * @return number of values inserted.
-   * @throws TileDBError
-   */
-  private int getVarLengthAttributeColumn(
-      String name, Datatype dataType, boolean isVar, long cellValNum, int index)
-      throws TileDBError {
-    metricsUpdater.startTimer(queryGetVariableLengthAttributeTimerName);
-    boolean nullable = false;
-    int numValues;
-    int bufferLength = 0;
-    short[] validityByteMap;
-    // reset columnar batch start index
-
-    if (this.arraySchema.hasAttribute(name)) {
-      try (Attribute attr = this.arraySchema.getAttribute(name)) {
-        nullable = attr.getNullable();
-      }
-    }
-
-    resultVectors[index].reset();
-    resultVectors[index].getChild(0).reset();
-    bufferLength = putValuesOfAttVar(name, dataType, index);
-    if (nullable) {
-      validityByteMap = query.getValidityByteMap(name);
-      for (int i = 0; i < validityByteMap.length; i++) { // check for null values.
-        if (validityByteMap[i] == 0) resultVectors[index].putNull(i);
-      }
-    }
-
-    if (isVar) {
-      // add var length offsets
-      long[] offsets = query.getVarBuffer(name);
-      numValues = offsets.length;
-      // number of bytes per (scalar) element in
-      int typeSize = dataType.getNativeSize();
-      long numBytes = bufferLength * typeSize;
-      for (int j = 0; j < numValues; j++) {
-        int off1 = Math.toIntExact(offsets[j] / typeSize);
-        int off2 = Math.toIntExact((j < numValues - 1 ? offsets[j + 1] : numBytes) / typeSize);
-        resultVectors[index].putArray(j, off1, off2 - off1);
-      }
-    } else {
-      // fixed sized array attribute
-      int cellNum = (int) cellValNum;
-      numValues = bufferLength / cellNum;
-      for (int j = 0; j < numValues; j++) {
-        resultVectors[index].putArray(j, cellNum * j, cellNum);
-      }
-    }
-    metricsUpdater.finish(queryGetVariableLengthAttributeTimerName);
-    return numValues;
-  }
-
-  @Deprecated
-  private int getDimensionColumn(String name, int index) throws TileDBError {
-    metricsUpdater.startTimer(queryGetDimensionTimerName);
-    int bufferLength = 0;
-    Dimension dim = domain.getDimension(name);
-    Datatype type = dim.getType();
-    int ndim = Math.toIntExact(domain.getNDim());
-
-    // perform a strided copy for dimension columnar buffers startng a dimIdx offset (slow path)
-    switch (type) {
-      case TILEDB_FLOAT32:
-        {
-          float[] buffer = (float[]) query.getBuffer(name);
-          bufferLength = buffer.length;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putFloats(0, bufferLength, buffer, 0);
-          }
-          break;
-        }
-      case TILEDB_FLOAT64:
-        {
-          double[] buffer = (double[]) query.getBuffer(name);
-          bufferLength = buffer.length;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putDoubles(0, bufferLength, buffer, 0);
-          }
-          break;
-        }
-      case TILEDB_INT8:
-        {
-          byte[] buffer = (byte[]) query.getBuffer(name);
-          bufferLength = buffer.length;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putBytes(0, bufferLength, buffer, 0);
-          }
-          break;
-        }
-      case TILEDB_INT16:
-      case TILEDB_UINT8:
-        {
-          short[] buffer = (short[]) query.getBuffer(name);
-          bufferLength = buffer.length;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putShorts(0, bufferLength, buffer, 0);
-          }
-          break;
-        }
-      case TILEDB_UINT16:
-      case TILEDB_INT32:
-        {
-          int[] buffer = (int[]) query.getBuffer(name);
-          bufferLength = buffer.length;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putInts(0, bufferLength, buffer, 0);
-          }
-          break;
-        }
-      case TILEDB_INT64:
-      case TILEDB_UINT32:
-      case TILEDB_UINT64:
-      case TILEDB_DATETIME_MS:
-        {
-          long[] buffer = (long[]) query.getBuffer(name);
-          bufferLength = buffer.length;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buffer, 0);
-          }
-          break;
-        }
-      case TILEDB_DATETIME_DAY:
-        {
-          long[] buffer = (long[]) query.getBuffer(name);
-          bufferLength = bufferLength / ndim;
-          if (resultVectors.length > 0) {
-            resultVectors[index].reset();
-            resultVectors[index].putLongs(0, bufferLength, buffer, 0);
-          }
-          break;
-        }
-      default:
-        {
-          throw new TileDBError("Unsupported dimension type for domain " + domain.getType());
-        }
-    }
-
-    metricsUpdater.finish(queryGetDimensionTimerName);
-    return bufferLength;
   }
 
   /** Close out onheap column vectors */
